--- a/notebooks/bench.ipynb
+++ b/notebooks/bench.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ad274b64-9f83-496f-a201-fb45ea4a75a5",
+   "id": "2f560f77-1fee-434a-8062-590673250473",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "76f10e01-4497-43d4-a47f-2a01ec5c011a",
    "metadata": {},
    "outputs": [
@@ -64,12 +64,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.14 ms ± 287 μs per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "1.67 ms ± 159 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit -r20 -n1\n",
+    "%%timeit -r1000 -n1\n",
     "anjl.canonical_nj(small_D)"
    ]
   },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "befccb6f-dffa-49b7-97eb-1d5437568001",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
        "(472, 472)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,17 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "3ff47662-e8e6-41a3-afe8-ff2a080455a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "medium_Z = anjl.canonical_nj(medium_D)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "316ec457-3799-4843-80df-491956229101",
    "metadata": {},
    "outputs": [
@@ -124,12 +114,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.6 ms ± 4.72 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "22.5 ms ± 1.58 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit -r20 -n1\n",
+    "%%timeit -r100 -n1\n",
     "anjl.canonical_nj(medium_D)"
    ]
   },
@@ -143,8 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "72f69caf-89be-4751-8512-e9afb52d0c46",
+   "execution_count": 10,
+   "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +143,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,43 +156,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "ca50b544-a9c1-426f-8395-a710f568662c",
+   "execution_count": 11,
+   "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.33 s ± 184 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r3 -n1\n",
+    "anjl.canonical_nj(large_D)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b5aca9a-4949-4dc1-a35c-171ee5b283de",
+   "metadata": {},
+   "source": [
+    "## XL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5868, 5868)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xl = zarr.load(\"../data/xl/dist.zarr.zip\")\n",
+    "xl_D = squareform(xl)\n",
+    "xl_D.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "49b6da7b-1ee3-49e1-98ca-2706a5195b01",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8eaf8a888ef540b9b7311701aebee9f5",
+       "model_id": "a36b8649c9fd4d7a9501a4e2b83df503",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Compute neighbour-joining tree:   0%|          | 0/3080 [00:00<?, ?it/s]"
+       "  0%|          | 0/5867 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 50.5 s, sys: 232 ms, total: 50.7 s\n",
+      "Wall time: 50.5 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.2360000e+03, 2.2820000e+03, 0.0000000e+00, 0.0000000e+00,\n",
+       "        2.0000000e+00],\n",
+       "       [2.2940000e+03, 5.8680000e+03, 0.0000000e+00, 0.0000000e+00,\n",
+       "        3.0000000e+00],\n",
+       "       [1.9260000e+03, 2.1540000e+03, 0.0000000e+00, 0.0000000e+00,\n",
+       "        2.0000000e+00],\n",
+       "       ...,\n",
+       "       [1.1713000e+04, 1.1718000e+04, 2.1921194e-01, 1.2669316e-01,\n",
+       "        6.1100000e+02],\n",
+       "       [1.1731000e+04, 1.1732000e+04, 3.4227647e-02, 2.5325187e-02,\n",
+       "        1.9140000e+03],\n",
+       "       [1.1729000e+04, 1.1733000e+04, 2.8613809e-02, 2.8613809e-02,\n",
+       "        5.8680000e+03]], dtype=float32)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "large_Z = anjl.canonical_nj(\n",
-    "    large_D,\n",
-    "    progress=tqdm,\n",
-    "    progress_options=dict(desc=\"Compute neighbour-joining tree\"),\n",
-    ")"
+    "%%time\n",
+    "anjl.canonical_nj(xl_D, progress=tqdm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "163b6626-20b0-407e-aa9c-d0dc4694cc22",
+   "metadata": {},
+   "source": [
+    "## XXL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8825, 8825)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xxl = zarr.load(\"../data/xxl/dist.zarr.zip\")\n",
+    "xxl_D = squareform(xxl)\n",
+    "xxl_D.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8949ce8a-7b75-470d-8ddf-501ab4cf462b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dee08ba6bb1a44019db1b54001d7f435",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8824 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOStream.flush timed out\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3min 25s, sys: 677 ms, total: 3min 26s\n",
+      "Wall time: 3min 25s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[6.7950000e+03, 6.7980000e+03, 0.0000000e+00, 0.0000000e+00,\n",
+       "        2.0000000e+00],\n",
+       "       [6.7990000e+03, 8.8250000e+03, 0.0000000e+00, 0.0000000e+00,\n",
+       "        3.0000000e+00],\n",
+       "       [6.8010000e+03, 8.8260000e+03, 0.0000000e+00, 0.0000000e+00,\n",
+       "        4.0000000e+00],\n",
+       "       ...,\n",
+       "       [1.7629000e+04, 1.7635000e+04, 1.7687052e-01, 1.2151480e-01,\n",
+       "        5.3800000e+03],\n",
+       "       [1.7645000e+04, 1.7646000e+04, 1.9032761e-02, 1.1707470e-02,\n",
+       "        8.6230000e+03],\n",
+       "       [1.7636000e+04, 1.7647000e+04, 3.6984187e-02, 3.6984187e-02,\n",
+       "        8.8250000e+03]], dtype=float32)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.canonical_nj(xxl_D, progress=tqdm)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4790acc8-583f-4098-9c3f-86240691844f",
+   "id": "9d9707a2-daa4-4ec6-a1eb-18e5a6645edf",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "%%timeit -r3 -n1\n",
-    "anjl.canonical_nj(large_D)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -225,105 +383,7 @@
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {
-     "15d8f5917af34f20a38a2c24b34e75b2": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "32a7ffcf817244c895e491fea0e7da6c": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "ProgressStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "4796757202ec4ad7b4e0f269fa74b457": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "4ef502b23658424b8a5d065fa23d50ac": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "78eb0c20c725435a95a1d5dd7ba87a32": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_15d8f5917af34f20a38a2c24b34e75b2",
-       "style": "IPY_MODEL_f9596949a76b40fca612c7ee3bef0cfa",
-       "value": "Compute neighbour-joining tree: 100%"
-      }
-     },
-     "8eaf8a888ef540b9b7311701aebee9f5": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_78eb0c20c725435a95a1d5dd7ba87a32",
-        "IPY_MODEL_e8c56600901b42229243743d572d10dc",
-        "IPY_MODEL_ae5c7386ef4f4106ae1adf240f9a18ca"
-       ],
-       "layout": "IPY_MODEL_c1ead1c4a68143b094f50621183fd0e1"
-      }
-     },
-     "967b86a8fbb24ee1b95c52fe2496b93c": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "HTMLStyleModel",
-      "state": {
-       "description_width": "",
-       "font_size": null,
-       "text_color": null
-      }
-     },
-     "ae5c7386ef4f4106ae1adf240f9a18ca": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_4796757202ec4ad7b4e0f269fa74b457",
-       "style": "IPY_MODEL_967b86a8fbb24ee1b95c52fe2496b93c",
-       "value": " 3080/3080 [00:15&lt;00:00, 1044.31it/s]"
-      }
-     },
-     "c1ead1c4a68143b094f50621183fd0e1": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "e8c56600901b42229243743d572d10dc": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "FloatProgressModel",
-      "state": {
-       "bar_style": "success",
-       "layout": "IPY_MODEL_4ef502b23658424b8a5d065fa23d50ac",
-       "max": 3080,
-       "style": "IPY_MODEL_32a7ffcf817244c895e491fea0e7da6c",
-       "value": 3080
-      }
-     },
-     "f9596949a76b40fca612c7ee3bef0cfa": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "HTMLStyleModel",
-      "state": {
-       "description_width": "",
-       "font_size": null,
-       "text_color": null
-      }
-     }
-    },
+    "state": {},
     "version_major": 2,
     "version_minor": 0
    }
