--- a/notebooks/rapid_bench.ipynb
+++ b/notebooks/rapid_bench.ipynb
@@ -236,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%timeit -r100 -n1\n",
+    "%%timeit -r500 -n1\n",
     "anjl.canonical_nj(small_D)"
    ]
   },
@@ -247,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%timeit -r100 -n1\n",
+    "%%timeit -r500 -n1\n",
     "anjl.rapid_nj(small_D, gc=None)"
    ]
   },
@@ -258,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%timeit -r100 -n1\n",
+    "%%timeit -r500 -n1\n",
     "anjl.rapid_nj(small_D, gc=100)"
    ]
   },
@@ -321,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%timeit -r50 -n1\n",
+    "%%timeit -r200 -n1\n",
     "anjl.canonical_nj(medium_D)"
    ]
   },
@@ -332,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%timeit -r30 -n1\n",
+    "%%timeit -r100 -n1\n",
     "anjl.rapid_nj(medium_D, gc=None)"
    ]
   },
@@ -343,7 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%timeit -r30 -n1\n",
+    "%%timeit -r100 -n1\n",
     "anjl.rapid_nj(medium_D, gc=10)"
    ]
   },
@@ -354,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%timeit -r30 -n1\n",
+    "%%timeit -r100 -n1\n",
     "anjl.rapid_nj(medium_D, gc=100)"
    ]
   },
@@ -365,7 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%timeit -r20 -n1\n",
+    "%%timeit -r100 -n1\n",
     "anjl.rapid_nj(medium_D, gc=1)"
    ]
   },
@@ -373,6 +373,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "193e3673-cfef-4f13-a850-8c5fd02587e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_diagnostics(medium_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "610be4c5-ba74-4244-b7b1-58792e693188",
    "metadata": {},
    "outputs": [],
    "source": [
