--- a/notebooks/bench.ipynb
+++ b/notebooks/bench.ipynb
@@ -46,17 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "c1486842-02b9-46a6-b166-acd2d61ba373",
    "metadata": {},
    "outputs": [],
    "source": [
-    "small_Z = anjl.canonical_nj(small_D)"
+    "small_Z = anjl.canonical_nj(small_D)\n",
+    "small_Z = anjl.rapid_nj(small_D)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "76f10e01-4497-43d4-a47f-2a01ec5c011a",
    "metadata": {},
    "outputs": [
@@ -64,13 +65,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.67 ms ± 159 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "2.09 ms ± 311 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r1000 -n1\n",
     "anjl.canonical_nj(small_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "915b0085-52d4-4126-ac48-59dfb7dc403e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.57 ms ± 571 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r1000 -n1\n",
+    "anjl.rapid_nj(small_D)"
    ]
   },
   {
@@ -83,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "befccb6f-dffa-49b7-97eb-1d5437568001",
    "metadata": {},
    "outputs": [
@@ -93,7 +113,7 @@
        "(472, 472)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "316ec457-3799-4843-80df-491956229101",
    "metadata": {},
    "outputs": [
@@ -114,13 +134,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22.5 ms ± 1.58 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+      "28.7 ms ± 1.89 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit -r100 -n1\n",
+    "%%timeit -r200 -n1\n",
     "anjl.canonical_nj(medium_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a7155702-0e81-4d54-a6b2-c68642e056f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44.3 ms ± 1.53 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r200 -n1\n",
+    "anjl.rapid_nj(medium_D)"
    ]
   },
   {
@@ -133,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -143,7 +182,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
    "metadata": {},
    "outputs": [
@@ -164,13 +203,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.33 s ± 184 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+      "8.05 s ± 62 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r3 -n1\n",
     "anjl.canonical_nj(large_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.87 s ± 33.3 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r3 -n1\n",
+    "anjl.rapid_nj(large_D)"
    ]
   },
   {
@@ -183,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -193,7 +251,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,14 +264,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "49b6da7b-1ee3-49e1-98ca-2706a5195b01",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a36b8649c9fd4d7a9501a4e2b83df503",
+       "model_id": "efcbecd45efa4283aff7fa8a05cd1217",
        "version_major": 2,
        "version_minor": 0
       },
@@ -228,36 +286,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 50.5 s, sys: 232 ms, total: 50.7 s\n",
-      "Wall time: 50.5 s\n"
+      "CPU times: user 60 s, sys: 762 ms, total: 1min\n",
+      "Wall time: 1min\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[2.2360000e+03, 2.2820000e+03, 0.0000000e+00, 0.0000000e+00,\n",
-       "        2.0000000e+00],\n",
-       "       [2.2940000e+03, 5.8680000e+03, 0.0000000e+00, 0.0000000e+00,\n",
-       "        3.0000000e+00],\n",
-       "       [1.9260000e+03, 2.1540000e+03, 0.0000000e+00, 0.0000000e+00,\n",
-       "        2.0000000e+00],\n",
-       "       ...,\n",
-       "       [1.1713000e+04, 1.1718000e+04, 2.1921194e-01, 1.2669316e-01,\n",
-       "        6.1100000e+02],\n",
-       "       [1.1731000e+04, 1.1732000e+04, 3.4227647e-02, 2.5325187e-02,\n",
-       "        1.9140000e+03],\n",
-       "       [1.1729000e+04, 1.1733000e+04, 2.8613809e-02, 2.8613809e-02,\n",
-       "        5.8680000e+03]], dtype=float32)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "anjl.canonical_nj(xl_D, progress=tqdm)"
+    "anjl.canonical_nj(xl_D, progress=tqdm);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0fc735cf11c949188a7b4e2319852456",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/5867 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 30.1 s, sys: 375 ms, total: 30.5 s\n",
+      "Wall time: 30.3 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.rapid_nj(xl_D, progress=tqdm);"
    ]
   },
   {
@@ -270,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -280,7 +350,7 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,14 +363,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "8949ce8a-7b75-470d-8ddf-501ab4cf462b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dee08ba6bb1a44019db1b54001d7f435",
+       "model_id": "1ce7fbca75b94aacb2b228ca180c2f5b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -312,46 +382,51 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IOStream.flush timed out\n"
+      "CPU times: user 3min 46s, sys: 984 ms, total: 3min 47s\n",
+      "Wall time: 3min 46s\n"
      ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.canonical_nj(xxl_D, progress=tqdm);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4b302183-5d97-41c0-857f-59086e8b981f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e758c8f6457c4916be606ba433d4e6c9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8824 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 25s, sys: 677 ms, total: 3min 26s\n",
-      "Wall time: 3min 25s\n"
+      "CPU times: user 1min 14s, sys: 569 ms, total: 1min 14s\n",
+      "Wall time: 1min 14s\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[6.7950000e+03, 6.7980000e+03, 0.0000000e+00, 0.0000000e+00,\n",
-       "        2.0000000e+00],\n",
-       "       [6.7990000e+03, 8.8250000e+03, 0.0000000e+00, 0.0000000e+00,\n",
-       "        3.0000000e+00],\n",
-       "       [6.8010000e+03, 8.8260000e+03, 0.0000000e+00, 0.0000000e+00,\n",
-       "        4.0000000e+00],\n",
-       "       ...,\n",
-       "       [1.7629000e+04, 1.7635000e+04, 1.7687052e-01, 1.2151480e-01,\n",
-       "        5.3800000e+03],\n",
-       "       [1.7645000e+04, 1.7646000e+04, 1.9032761e-02, 1.1707470e-02,\n",
-       "        8.6230000e+03],\n",
-       "       [1.7636000e+04, 1.7647000e+04, 3.6984187e-02, 3.6984187e-02,\n",
-       "        8.8250000e+03]], dtype=float32)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "anjl.canonical_nj(xxl_D, progress=tqdm)"
+    "anjl.rapid_nj(xxl_D, progress=tqdm);"
    ]
   },
   {
