--- a/notebooks/bench.ipynb
+++ b/notebooks/bench.ipynb
@@ -46,18 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "c1486842-02b9-46a6-b166-acd2d61ba373",
    "metadata": {},
    "outputs": [],
    "source": [
     "small_Z = anjl.canonical_nj(small_D)\n",
-    "small_Z = anjl.rapid_nj(small_D)"
+    "small_Z = anjl.rapid_nj(small_D, gc=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "76f10e01-4497-43d4-a47f-2a01ec5c011a",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.09 ms ± 311 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.64 ms ± 123 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "915b0085-52d4-4126-ac48-59dfb7dc403e",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.57 ms ± 571 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "3.98 ms ± 206 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "befccb6f-dffa-49b7-97eb-1d5437568001",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "(472, 472)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "316ec457-3799-4843-80df-491956229101",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28.7 ms ± 1.89 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "21.8 ms ± 862 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "a7155702-0e81-4d54-a6b2-c68642e056f2",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "44.3 ms ± 1.53 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "34.7 ms ± 1.25 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.05 s ± 62 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+      "5.78 s ± 35.2 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.87 s ± 33.3 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+      "3.17 s ± 10.6 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,14 +264,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "49b6da7b-1ee3-49e1-98ca-2706a5195b01",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efcbecd45efa4283aff7fa8a05cd1217",
+       "model_id": "6feed92d21a04bc6b81ab1b14febd59a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -286,8 +286,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 60 s, sys: 762 ms, total: 1min\n",
-      "Wall time: 1min\n"
+      "CPU times: user 49.5 s, sys: 231 ms, total: 49.8 s\n",
+      "Wall time: 49.6 s\n"
      ]
     }
    ],
@@ -298,14 +298,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fc735cf11c949188a7b4e2319852456",
+       "model_id": "35658d710cbf4abf92ccd302be8cc365",
        "version_major": 2,
        "version_minor": 0
       },
@@ -320,8 +320,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 30.1 s, sys: 375 ms, total: 30.5 s\n",
-      "Wall time: 30.3 s\n"
+      "CPU times: user 22.5 s, sys: 263 ms, total: 22.8 s\n",
+      "Wall time: 22.7 s\n"
      ]
     }
    ],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,14 +363,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "8949ce8a-7b75-470d-8ddf-501ab4cf462b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ce7fbca75b94aacb2b228ca180c2f5b",
+       "model_id": "fa4895f48e33435198df3c3d23215cff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -385,8 +385,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 46s, sys: 984 ms, total: 3min 47s\n",
-      "Wall time: 3min 46s\n"
+      "CPU times: user 3min 21s, sys: 669 ms, total: 3min 22s\n",
+      "Wall time: 3min 21s\n"
      ]
     }
    ],
@@ -397,14 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e758c8f6457c4916be606ba433d4e6c9",
+       "model_id": "f61a93421d6e4a38889ccb4db10298e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -419,8 +419,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 14s, sys: 569 ms, total: 1min 14s\n",
-      "Wall time: 1min 14s\n"
+      "CPU times: user 1min 10s, sys: 624 ms, total: 1min 10s\n",
+      "Wall time: 1min 10s\n"
      ]
     }
    ],
