--- a/notebooks/bench.ipynb
+++ b/notebooks/bench.ipynb
@@ -51,6 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# warm up\n",
     "small_Z = anjl.canonical_nj(small_D)\n",
     "small_Z = anjl.rapid_nj(small_D, gc=10)"
    ]
@@ -58,25 +59,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "76f10e01-4497-43d4-a47f-2a01ec5c011a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.68 ms ± 132 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit -r1000 -n1\n",
-    "anjl.canonical_nj(small_D)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "915b0085-52d4-4126-ac48-59dfb7dc403e",
    "metadata": {},
    "outputs": [
@@ -84,13 +66,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.14 ms ± 368 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "3.94 ms ± 190 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r1000 -n1\n",
     "anjl.rapid_nj(small_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "76f10e01-4497-43d4-a47f-2a01ec5c011a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.66 ms ± 149 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r1000 -n1\n",
+    "anjl.canonical_nj(small_D)"
    ]
   },
   {
@@ -127,25 +128,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "316ec457-3799-4843-80df-491956229101",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22.3 ms ± 1.51 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit -r200 -n1\n",
-    "anjl.canonical_nj(medium_D)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "a7155702-0e81-4d54-a6b2-c68642e056f2",
    "metadata": {},
    "outputs": [
@@ -153,13 +135,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37.8 ms ± 4.35 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "34.3 ms ± 624 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r200 -n1\n",
     "anjl.rapid_nj(medium_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "316ec457-3799-4843-80df-491956229101",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21.7 ms ± 1.13 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r200 -n1\n",
+    "anjl.canonical_nj(medium_D)"
    ]
   },
   {
@@ -196,25 +197,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.83 s ± 45.9 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit -r3 -n1\n",
-    "anjl.canonical_nj(large_D)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
    "metadata": {},
    "outputs": [
@@ -222,13 +204,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.14 s ± 17.7 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+      "3.06 s ± 27.2 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r3 -n1\n",
     "anjl.rapid_nj(large_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.79 s ± 29 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r3 -n1\n",
+    "anjl.canonical_nj(large_D)"
    ]
   },
   {
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -251,7 +252,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,48 +265,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "49b6da7b-1ee3-49e1-98ca-2706a5195b01",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6feed92d21a04bc6b81ab1b14febd59a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/5867 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 49.5 s, sys: 231 ms, total: 49.8 s\n",
-      "Wall time: 49.6 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "anjl.canonical_nj(xl_D, progress=tqdm);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35658d710cbf4abf92ccd302be8cc365",
+       "model_id": "14caff6978c34121b132ae9eeae27c94",
        "version_major": 2,
        "version_minor": 0
       },
@@ -320,14 +287,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 22.5 s, sys: 263 ms, total: 22.8 s\n",
-      "Wall time: 22.7 s\n"
+      "CPU times: user 18.1 s, sys: 283 ms, total: 18.4 s\n",
+      "Wall time: 18.4 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "anjl.rapid_nj(xl_D, progress=tqdm);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "49b6da7b-1ee3-49e1-98ca-2706a5195b01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cdbd6f7e0ffd4e7a8847e43ec429a721",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/5867 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 47.8 s, sys: 214 ms, total: 48 s\n",
+      "Wall time: 47.9 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.canonical_nj(xl_D, progress=tqdm);"
    ]
   },
   {
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -350,7 +351,7 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,14 +364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "8949ce8a-7b75-470d-8ddf-501ab4cf462b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa4895f48e33435198df3c3d23215cff",
+       "model_id": "07ad3d0110b5434681296b93cd147aac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -385,8 +386,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 21s, sys: 669 ms, total: 3min 22s\n",
-      "Wall time: 3min 21s\n"
+      "CPU times: user 3min 39s, sys: 686 ms, total: 3min 40s\n",
+      "Wall time: 3min 39s\n"
      ]
     }
    ],
@@ -397,14 +398,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f61a93421d6e4a38889ccb4db10298e2",
+       "model_id": "caa469c6330d4b6181e856351db074f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -419,8 +420,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 10s, sys: 624 ms, total: 1min 10s\n",
-      "Wall time: 1min 10s\n"
+      "CPU times: user 1min 6s, sys: 793 ms, total: 1min 6s\n",
+      "Wall time: 1min 6s\n"
      ]
     }
    ],
