--- a/notebooks/bench.ipynb
+++ b/notebooks/bench.ipynb
@@ -47,18 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c1486842-02b9-46a6-b166-acd2d61ba373",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# warm up\n",
-    "small_Z = anjl.canonical_nj(small_D)\n",
-    "small_Z = anjl.rapid_nj(small_D, gc=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "915b0085-52d4-4126-ac48-59dfb7dc403e",
    "metadata": {},
    "outputs": [
@@ -66,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.94 ms ± 190 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.12 ms ± 186 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -77,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "76f10e01-4497-43d4-a47f-2a01ec5c011a",
    "metadata": {},
    "outputs": [
@@ -85,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.66 ms ± 149 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.78 ms ± 134 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -104,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "befccb6f-dffa-49b7-97eb-1d5437568001",
    "metadata": {},
    "outputs": [
@@ -114,7 +102,7 @@
        "(472, 472)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a7155702-0e81-4d54-a6b2-c68642e056f2",
    "metadata": {},
    "outputs": [
@@ -135,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34.3 ms ± 624 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "34.9 ms ± 1.1 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -146,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "316ec457-3799-4843-80df-491956229101",
    "metadata": {},
    "outputs": [
@@ -154,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21.7 ms ± 1.13 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "23.6 ms ± 1.19 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -173,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -183,7 +171,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
    "metadata": {},
    "outputs": [
@@ -204,18 +192,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.06 s ± 27.2 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+      "3.27 s ± 25.4 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit -r3 -n1\n",
+    "%%timeit -r5 -n1\n",
     "anjl.rapid_nj(large_D)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
    "metadata": {},
    "outputs": [
@@ -223,12 +211,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.79 s ± 29 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+      "6.82 s ± 31.5 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit -r3 -n1\n",
+    "%%timeit -r5 -n1\n",
     "anjl.canonical_nj(large_D)"
    ]
   },
@@ -242,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -252,7 +240,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,14 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14caff6978c34121b132ae9eeae27c94",
+       "model_id": "2c774a2aa644404c93bb05e0d0565982",
        "version_major": 2,
        "version_minor": 0
       },
@@ -287,8 +275,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18.1 s, sys: 283 ms, total: 18.4 s\n",
-      "Wall time: 18.4 s\n"
+      "CPU times: user 21.4 s, sys: 236 ms, total: 21.7 s\n",
+      "Wall time: 21.5 s\n"
      ]
     }
    ],
@@ -299,14 +287,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "49b6da7b-1ee3-49e1-98ca-2706a5195b01",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cdbd6f7e0ffd4e7a8847e43ec429a721",
+       "model_id": "7216104e7ea94284a568a598d978928e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,8 +309,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 47.8 s, sys: 214 ms, total: 48 s\n",
-      "Wall time: 47.9 s\n"
+      "CPU times: user 1min, sys: 89.8 ms, total: 1min\n",
+      "Wall time: 1min\n"
      ]
     }
    ],
@@ -364,40 +352,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "8949ce8a-7b75-470d-8ddf-501ab4cf462b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07ad3d0110b5434681296b93cd147aac",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/8824 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 3min 39s, sys: 686 ms, total: 3min 40s\n",
-      "Wall time: 3min 39s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "anjl.canonical_nj(xxl_D, progress=tqdm);"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
@@ -428,6 +382,40 @@
    "source": [
     "%%time\n",
     "anjl.rapid_nj(xxl_D, progress=tqdm);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8949ce8a-7b75-470d-8ddf-501ab4cf462b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "07ad3d0110b5434681296b93cd147aac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8824 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3min 39s, sys: 686 ms, total: 3min 40s\n",
+      "Wall time: 3min 39s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.canonical_nj(xxl_D, progress=tqdm);"
    ]
   },
   {
