--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -39,7 +39,7 @@
     }
    ],
    "source": [
-    "small = zarr.load(\"../data/small/dist.zarr.zip\")\n",
+    "small = zarr.load(\"../benchmark/small/dist.zarr.zip\")\n",
     "small_D = squareform(small)\n",
     "small_D.shape"
    ]
@@ -108,7 +108,7 @@
     }
    ],
    "source": [
-    "medium = zarr.load(\"../data/medium/dist.zarr.zip\")\n",
+    "medium = zarr.load(\"../benchmark/medium/dist.zarr.zip\")\n",
     "medium_D = squareform(medium)\n",
     "medium_D.shape"
    ]
@@ -177,7 +177,7 @@
     }
    ],
    "source": [
-    "large = zarr.load(\"../data/large/dist.zarr.zip\")\n",
+    "large = zarr.load(\"../benchmark/large/dist.zarr.zip\")\n",
     "large_D = squareform(large)\n",
     "large_D.shape"
    ]
@@ -246,7 +246,7 @@
     }
    ],
    "source": [
-    "xl = zarr.load(\"../data/xl/dist.zarr.zip\")\n",
+    "xl = zarr.load(\"../benchmark/xl/dist.zarr.zip\")\n",
     "xl_D = squareform(xl)\n",
     "xl_D.shape"
    ]
@@ -345,7 +345,7 @@
     }
    ],
    "source": [
-    "xxl = zarr.load(\"../data/xxl/dist.zarr.zip\")\n",
+    "xxl = zarr.load(\"../benchmark/xxl/dist.zarr.zip\")\n",
     "xxl_D = squareform(xxl)\n",
     "xxl_D.shape"
    ]
