--- a/sandbox/diagnostics.ipynb
+++ b/sandbox/diagnostics.ipynb
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "small = zarr.load(\"../data/small/dist.zarr.zip\")\n",
+    "small = zarr.load(\"../benchmark/small/dist.zarr.zip\")\n",
     "small_D = squareform(small)\n",
     "small_D.shape"
    ]
@@ -287,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "medium = zarr.load(\"../data/medium/dist.zarr.zip\")\n",
+    "medium = zarr.load(\"../benchmark/medium/dist.zarr.zip\")\n",
     "medium_D = squareform(medium)\n",
     "medium_D.shape"
    ]
@@ -394,7 +394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "large = zarr.load(\"../data/large/dist.zarr.zip\")\n",
+    "large = zarr.load(\"../benchmark/large/dist.zarr.zip\")\n",
     "large_D = squareform(large)\n",
     "shuffle = np.random.choice(large_D.shape[0], size=2000, replace=False)\n",
     "large_D_shuffled = large_D.take(shuffle, axis=0).take(shuffle, axis=1)\n",
@@ -482,7 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xxl = zarr.load(\"../data/xxl/dist.zarr.zip\")\n",
+    "xxl = zarr.load(\"../benchmark/xxl/dist.zarr.zip\")\n",
     "xxl_D = squareform(xxl)\n",
     "# xxl_shuffle = np.random.choice(xxl_D.shape[0], size=7000, replace=False)\n",
     "# xxl_D_shuffled = xxl_D.take(xxl_shuffle, axis=0).take(xxl_shuffle, axis=1)\n",
